[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "two_sum"
harness = false

[[bench]]
name = "palindrome_number"
harness = false

[[bench]]
name = "roman_to_integer"
harness = false

[[bench]]
name = "longest_common_prefix"
harness = false

[[bench]]
name = "valid_parentheses"
harness = false

[[bench]]
name = "merge_two_sorted_list"
harness = false
