[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "two_sum"
harness = false

[[bench]]
name = "palindrome_number"
harness = false

[[bench]]
name = "roman_to_integer"
harness = false

[[bench]]
name = "longest_common_prefix"
harness = false

[[bench]]
name = "valid_parentheses"
harness = false

[[bench]]
name = "merge_two_sorted_list"
harness = false

[[bench]]
name = "remove_duplicates_from_sorted_array"
harness = false

[[bench]]
name = "remove_element"
harness = false

[[bench]]
name = "implement_strstr"
harness = false

[[bench]]
name = "search_insert_position"
harness = false

[[bench]]
name = "maximum_subarray"
harness = false

[[bench]]
name = "length_last_word"
harness = false

[[bench]]
name = "plus_one"
harness = false

[[bench]]
name = "add_binary"
harness = false

[[bench]]
name = "sqrt"
harness = false

[[bench]]
name = "climbing_stairs"
harness = false

[[bench]]
name = "remove_duplicates_from_sorted_linked_list"
harness = false

[[bench]]
name = "merge_sorted_array"
harness = false

[[bench]]
name = "binary_tree_inorder_traversal"
harness = false

[[bench]]
name = "same_tree"
harness = false

[[bench]]
name = "convert_sorted_array_to_binary_search_tree"
harness = false

[[bench]]
name = "pascal_triangle_two"
harness = false

[[bench]]
name = "reverse_bits"
harness = false

[[bench]]
name = "reverse_linked_list"
harness = false

[[bench]]
name = "contains_duplicate"
harness = false

[[bench]]
name = "valid_anagram"
harness = false
